# basic-synth

./: CMakeLists.txt
src/: main.cpp
src/modules/: Angle.h  Rand.h  Rectangle.h  Vector.h
